don't show an error message for empty names in Define Names, fdo#46816

Signed-off-by: Kohei Yoshida <kohei.yoshida@suse.com>
(cherry picked from commit f4f0ef5790bd06145d977183da0ee244c5c46058)

Signed-off-by: Eike Rathke <erack@redhat.com>
Signed-off-by: Michael Meeks <michael.meeks@suse.com>